# libkeepass

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: group.hh
src/: entry.hh  kdb.cc  kdbx.cc  metadata.hh  temporal.hh  util.hh
